--- a/alacritty/.alacritty.yml
+++ b/alacritty/.alacritty.yml
@@ -1,1 +1,15 @@
+# font styles
+font:
+  normal:
+    family: "Dank Mono"
+    style: Regular
+  bold:
+    family: "Dank Mono"
+    style: Bold
+  italic:
+    family: "Dank Mono"
+    style: Italic
+  size: 12.5
+
+# set option key to not send "esc"
 alt_send_esc: false
