--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,10 @@
+# bind new prefix key
 set -g prefix C-a
 
+# reload of tmux config without killing the current session
 bind C-r source-file ~/.tmux-conf
 
+# add vim like moving between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
