--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,16 @@
 # bind new prefix key
+unbind C-b
 set -g prefix C-a
 
 # reload of tmux config without killing the current session
-bind C-r source-file ~/.tmux-conf
+bind C-r source-file ~/.tmux.conf
 
 # add vim like moving between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Enable mouse control clickable panes
+set -g mouse-select-window on
+set -g mouse-select-pane on
