--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,5 +12,4 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Enable mouse control clickable panes
-set -g mouse-select-window on
-set -g mouse-select-pane on
+set -g mouse on
