--- a/tmux/tmuxinator/side-projects.yml
+++ b/tmux/tmuxinator/side-projects.yml
@@ -1,57 +1,42 @@
 # /Users/boapi/.config/tmuxinator/side-projects.yml
 
 name: side-projects
-root: ~/
-
-# Optional tmux socket
-# socket_name: foo
-
-# Note that the pre and post options have been deprecated and will be replaced by
-# project hooks.
-
-# Project hooks
-
-# Runs on project start, always
-# on_project_start: command
-
-# Run on project start, the first time
-# on_project_first_start: command
-
-# Run on project start, after the first time
-# on_project_restart: command
-
-# Run on project exit ( detaching from tmux session )
-# on_project_exit: command
-
-# Run on project stop
-# on_project_stop: command
-
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
-
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
-# Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: editor
-
-# Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
+root: ~/Documents/projects/
 
 windows:
-  - editor:
+  - .dot-files:
+      root: ~/Documents/projects/.dot-files
       layout: main-vertical
-      # Synchronize all panes of this window, can be enabled before or after the pane commands run.
-      # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
-      # synchronize: after
       panes:
-        - vim
-        - guard
-  - server: bundle exec rails s
-  - logs: tail -f log/development.log
+        - nvim .
+        - 
+  - BoaPi:
+      root: ~/Documents/projects/BoaPi
+      layout: main-vertical
+      panes:
+        - nvim .
+        - 
+  - .dev:
+      root: ~/Documents/projects/tobiasweyer.dev
+      layout: main-vertical
+      panes:
+        - nvim .
+        - 
+  - grrs:
+      root: ~/Documents/projects/learning-rust/grrs
+      layout: main-vertical
+      panes:
+        - nvim .
+        - 
+  - learning-rust: 
+      root: ~/Documents/projects/learning-rust
+      layout: main-vertical
+      panes:
+        - nvim .
+        - 
+  - notes:
+      root: ~/Documents/projects/notes
+      layout: main-vertical
+      panes:
+        - nvim .
+        - 
