--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,34 +15,102 @@ bind l select-pane -R
 set -g mouse on
 
 # set tokyonigh colors
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
 
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
+# set -g pane-border-style "fg=#3b4261"
+# set -g pane-active-border-style "fg=#7aa2f7"
 
-set -g status "on"
-set -g status-justify "left"
+# set -g status "on"
+# set -g status-justify "left"
 
-set -g status-style "fg=#7aa2f7,bg=#16161e"
+# set -g status-style "fg=#7aa2f7,bg=#16161e"
 
-set -g status-left-length "100"
-set -g status-right-length "100"
+# set -g status-left-length "100"
+# set -g status-right-length "100"
 
-set -g status-left-style NONE
-set -g status-right-style NONE
+# set -g status-left-style NONE
+# set -g status-right-style NONE
 
-set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
+# set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
 
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
+# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
+# setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
 
 # tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
-set -g @prefix_highlight_output_suffix ""
+# set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
+# set -g @prefix_highlight_output_suffix ""
+
+# catppuccin mocha theme
+# --> Catppuccin (Mocha)
+thm_bg="#1e1e2e"
+thm_fg="#cdd6f4"
+thm_cyan="#89dceb"
+thm_black="#181825"
+thm_gray="#313244"
+thm_magenta="#cba6f7"
+thm_pink="#f5c2e7"
+thm_red="#f38ba8"
+thm_green="#a6e3a1"
+thm_yellow="#f9e2af"
+thm_blue="#89b4fa"
+thm_orange="#fab387"
+thm_black4="#585b70"
+
+# ----------------------------=== Theme ===--------------------------
+
+# utils
+#set() {
+#	local option=$1
+#	local value=$2
+#	tmux set-option -gq "$option" "$value"
+#}
+#
+#setw() {
+#	local option=$1
+#	local value=$2
+#	tmux set-window-option -gq "$option" "$value"
+#}
+
+# status
+set status "on"
+set status-bg "${thm_bg}"
+set status-justify "left"
+set status-left-length "100"
+set status-right-length "100"
+
+# messages
+set message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+
+# panes
+set pane-border-style "fg=${thm_gray}"
+set pane-active-border-style "fg=${thm_blue}"
+
+# windows
+setw window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
+setw window-status-separator ""
+setw window-status-style "fg=${thm_fg},bg=${thm_bg},none"
+
+# --------=== Statusline
+
+set status-left ""
+set status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #W #{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg] #[fg=$thm_fg,bg=$thm_gray] #S "
+
+# current_dir
+setw window-status-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
+setw window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_bg] #{b:pane_current_path} "
+
+# parent_dir/current_dir
+# setw window-status-format "#[fg=colour232,bg=colour111] #I #[fg=colour222,bg=colour235] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+# setw window-status-current-format "#[fg=colour232,bg=colour208] #I #[fg=colour255,bg=colour237] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+
+# --------=== Modes
+setw clock-mode-colour "${thm_blue}"
+setw mode-style "fg=${thm_pink} bg=${thm_black4} bold"
