clean up, add tpm, add tmux-vim for navigation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,16 +3,15 @@ unbind C-b
 set -g prefix C-a
 
 # reload of tmux config without killing the current session
-bind C-r source-file ~/.tmux.conf
+unbind r
+bind r source-file ~/.tmux.conf
 
-# add vim like moving between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# add bindings for split panes
+unbind '"'
+bind - split-window -v
 
-# Enable mouse control clickable panes
-set -g mouse on
+unbind %
+bind | split-window -h
 
 # catppuccin mocha theme
 # --> Catppuccin (Mocha)
@@ -29,8 +28,16 @@ thm_yellow="#f9e2af"
 thm_blue="#89b4fa"
 thm_orange="#fab387"
 thm_black4="#585b70"
+# add resize to vim like motions
+bind -r j resize-pane -D 1
+bind -r k resize-pane -U 1
+bind -r l resize-pane -R 1
+bind -r h resize-pane -L 1
+bind m resize-pane -Z
 
 # ----------------------------=== Theme ===--------------------------
+# Enable mouse control clickable panes
+set -g mouse on
 
 # utils
 #set() {
@@ -44,6 +51,8 @@ thm_black4="#585b70"
 #	local value=$2
 #	tmux set-window-option -gq "$option" "$value"
 #}
+# add tpm as plugin manager
+set -g @plugin 'tmux-plugins/tpm'
 
 # status
 set status "on"
@@ -51,6 +60,8 @@ set status-bg "${thm_bg}"
 set status-justify "left"
 set status-left-length "100"
 set status-right-length "100"
+# list of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # messages
 set message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
@@ -81,3 +92,5 @@ setw window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,
 # --------=== Modes
 setw clock-mode-colour "${thm_blue}"
 setw mode-style "fg=${thm_pink} bg=${thm_black4} bold"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
