--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,12 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator' # navigate between tmux and vim
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
