add for new split windows to use current directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,10 +8,10 @@ bind r source-file ~/.tmux.conf
 
 # add bindings for split panes
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 # add resize to vim like motions
 bind -r j resize-pane -D 1
