--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,9 @@ bind m resize-pane -Z
 # Enable mouse control clickable panes
 set -g mouse on
 
+# layout
+set -g status-position top
+
 # add tpm as plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 
